--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <!-- スクリーンリーダー用のスキップリンク -->
     <a href="#main-content" class="skip-link">メインコンテンツにスキップ</a>
     
-    <!-- ダークモード切り替えボタン -->
-    <button class="theme-toggle" id="themeToggle" aria-label="ダークモードとライトモードを切り替える">🌓</button>
+    <div class="header-container">
+        <h1>肥料計算ツール
+            <!-- 使い方ボタン -->
+            <button class="help-button" id="helpButton" aria-label="使い方を表示する">❓</button>
 
-    <!-- 使い方ボタン -->
-    <button class="help-button" id="helpButton" aria-label="使い方を表示する">❓</button>
-
-    <h1>肥料計算ツール</h1>
+            <!-- ダークモード切り替えボタン -->
+            <button class="theme-toggle" id="themeToggle" aria-label="ダークモードとライトモードを切り替える">🌓</button>
+        </h1>
+    </div>
     
     <main id="main-content">
         <!-- タブナビゲーション -->
