--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     <a href="#main-content" class="skip-link">メインコンテンツにスキップ</a>
     
     <div class="header-container">
-        <h1>肥料計算ツール
+        <h1>肥料計算ツール</h1>
+        <div class="header-buttons">
             <!-- 使い方ボタン -->
             <button class="help-button" id="helpButton" aria-label="使い方を表示する">❓</button>
 
             <!-- ダークモード切り替えボタン -->
             <button class="theme-toggle" id="themeToggle" aria-label="ダークモードとライトモードを切り替える">🌓</button>
-        </h1>
+        </div>
     </div>
     
     <main id="main-content">
