--- a/index.html
+++ b/index.html
@@ -25,18 +25,10 @@
     <main id="main-content">
         <!-- タブナビゲーション -->
         <div class="tabs" role="tablist" aria-label="肥料計算ツールのセクション">
-            <button class="tab" role="tab" data-tab="inputTab" aria-selected="true" tabindex="0">
-                入力
-            </button>
-            <button class="tab" role="tab" data-tab="listTab" aria-selected="false" tabindex="-1">
-                一覧
-            </button>
-            <button class="tab" role="tab" data-tab="resultsTab" aria-selected="false" tabindex="-1">
-                結果
-            </button>
-            <button class="tab" role="tab" data-tab="historyTab" aria-selected="false" tabindex="-1">
-                履歴
-            </button>
+            <button class="tab" role="tab" data-tab="inputTab" aria-selected="true" tabindex="0">入力</button><!--
+            --><button class="tab" role="tab" data-tab="listTab" aria-selected="false" tabindex="-1">一覧</button><!--
+            --><button class="tab" role="tab" data-tab="resultsTab" aria-selected="false" tabindex="-1">結果</button><!--
+            --><button class="tab" role="tab" data-tab="historyTab" aria-selected="false" tabindex="-1">履歴</button>
         </div>
         
         <!-- 入力タブコンテンツ -->
