--- a/index.html
+++ b/index.html
@@ -65,9 +65,15 @@
                 </div>
             </div>
             
-            <div class="form-group">
-                <label for="amount">使用量 (g) <span aria-hidden="true">*</span></label>
-                <input type="number" id="amount" min="0" step="0.1" required aria-required="true">
+            <div class="form-group amount-container">
+                <label for="amount">使用量 <span aria-hidden="true">*</span></label>
+                <div class="amount-input-group">
+                    <input type="number" id="amount" min="0" step="0.1" required aria-required="true">
+                    <select id="amountUnit">
+                        <option value="g">g</option>
+                        <option value="kg">kg</option>
+                    </select>
+                </div>
             </div>
             
             <div class="toggle-section" id="toggleAdvanced" onclick="toggleAdvancedFields()" tabindex="0" role="button" aria-expanded="false">
